# extracting_invoice_data

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  invoice_app.py  olddc.yml  ollama_entrypoint.sh  pyproject.toml  temp.env
src/insights/: invoice_app.py  invoice_processor.py  pdf_to_text.py  prompts.py
